[workspace]
resolver = "2"
members = ["modparser", "modrinth", "mpack", "mparse", "mpcli"]

[workspace.dependencies]
log = "0.4.21"
thiserror = "1.0.58"
anyhow = "1.0.86"
sha1_smol = { version = "1.0.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
zip = { version = "0.6.6", default-features = false, features = [
  "deflate",
  "bzip2",
] }

[workspace.lints.clippy]
dbg_macro = "forbid"
allow_attributes = "forbid"
collection_is_never_read = "forbid"
module_inception = "allow"
to_string_trait_impl = "allow"
