[workspace]
resolver = "2"
members = ["curseforge", "modparser", "modrinth", "mparse", "mpcli"]

[workspace.dependencies]
log = "0.4.21"
thiserror = "1.0.58"
anyhow = "1.0.86"
serde_json = "1.0.116"
dotenv = "0.15.0"

sha1_smol = { version = "1.0.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12.4", features = ["json", "stream", "blocking"] }
tokio = { version = "1.37.0", features = ["full"] }

[workspace.lints.clippy]
dbg_macro = "forbid"
allow_attributes = "forbid"
collection_is_never_read = "forbid"
module_inception = "allow"
to_string_trait_impl = "allow"
