[package]
name = "denji"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
reqwest = { workspace = true, features = ["stream"] }
mar = { path = "../mar" }

[dev-dependencies]
env_logger = "0.11.5"
humantime = "2.1.0"
temp-dir.workspace = true
tokio.workspace = true

[lints]
workspace = true
