[package]
name = "hangar"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
log = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
tokio = { workspace = true, features = ["full"], optional = true }
bitflags = { version = "2.6.0", features = ["serde"] }
chrono = { version = "0.4.38", default-features = false, features = [
  "std",
  "serde",
] }

[features]
default = ["api", "types"]
types = ["dep:serde"]
api = ["dep:thiserror", "dep:log", "dep:reqwest", "dep:tokio"]


[lints]
workspace = true
