[package]
name = "hangar"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror = { workspace = true, optional = true }
log = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
tokio = { workspace = true, features = ["full"], optional = true }
bitflags = { version = "2.6.0" }
chrono = { version = "0.4.38", default-features = false, features = [
  "std",
  "serde",
] }

[features]
default = ["api", "types"]
types = []
api = ["dep:thiserror", "dep:log", "dep:reqwest", "dep:tokio", "types"]


[lints]
workspace = true
