[package]
name = "mar"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
thiserror.workspace = true
serde.workspace = true
reqwest = { workspace = true, features = ["stream"] }
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde-xml-rs = "0.6.0"

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
