[package]
name = "mcs-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
denji = { path = "../denji" }
modparser = { path = "../modparser" }
mparse = { path = "../mparse" }

modrinth = { path = "../modrinth" }
hangar = { path = "../hangar" }

[build-dependencies]
anyhow.workspace = true
lazy_static = "1.5.0"

[lib]
name = "mcs"
crate-type = ["cdylib"]

[lints]
workspace = true
