[package]
name = "modparser"
version = "1.0.0"
edition = "2021"
description = "Library to parse minecraft mod (*.jar) files"
license = "GPL-v3"
repository = "https://github.com/Kiwifuit/McManager"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { workspace = true, features = ["deflate"] }
serde.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
toml = "0.8.12"
serde_json.workspace = true

[lints]
workspace = true
