[package]
name = "modrinth"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
log = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
tokio = { workspace = true, features = ["full"], optional = true }

[features]
default = ["api", "types"]
types = ["dep:serde"]
api = ["dep:thiserror", "dep:log", "dep:reqwest", "dep:tokio"]

[lints]
workspace = true
