[package]
name = "mpcli"
version = "0.1.1"
edition = "2021"

[dependencies]
mparse = { path = "../mparse" }
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
sha1_smol.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["stream", "blocking"] }
zip.workspace = true
clap = { version = "4.5.8", features = ["derive", "string"] }
fern = { version = "0.6.2", features = ["colored"] }
dialoguer = { version = "0.11.0", default-features = false, features = [
  "fuzzy-select",
  "completion",
] }
clap-verbosity-flag = "2.2.0"
indicatif = "0.17.8"
tempdir = "0.3.7"


[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
dirs = "5.0.1"

[lints]
workspace = true

[features]
default = ["modrinth", "forge"]
modrinth = []
forge = []
