[package]
name = "mpcli"
version = "0.1.1"
edition = "2021"

[dependencies]
# Workspace
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Core
reqwest = { workspace = true, features = ["stream", "blocking"] }
clap = { version = "4.5.8", features = ["derive", "string"] }
fern = { version = "0.6.2", features = ["colored"] }
clap-verbosity-flag = "2.2.0"
indicatif = "0.17.8"
tempdir = "0.3.7"
owo-colors = "4.0.0"

# Modrinth/Curseforge modpack parsing
mparse = { path = "../mparse", optional = true }
display_tree = { version = "1.1.2", optional = true }

# Packing
serde = { workspace = true, optional = true }
sha1_smol = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
zip = { workspace = true, optional = true }
dialoguer = { version = "0.11.0", default-features = false, features = [
  "fuzzy-select",
  "completion",
], optional = true }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
dirs = "5.0.1"

[lints]
workspace = true

[features]
default = ["modrinth", "forge", "packing"]
modrinth = ["dep:mparse", "dep:serde_json", "dep:display_tree"]
forge = ["dep:mparse", "dep:serde_json", "dep:display_tree"]
packing = [
  "dep:serde",
  "dep:sha1_smol",
  "dep:serde_json",
  "dep:zip",
  "dep:dialoguer",
]
display_tree = ["dep:display_tree"]
